--- a/app/src/main/res/drawable/btn_outline_green.xml
+++ b/app/src/main/res/drawable/btn_outline_green.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <solid android:color="@android:color/white" />
     <corners android:radius="16dp"/>
-    <stroke android:width="1dip" android:color="@color/primary_dark"/>
+    <stroke android:width="1dip" android:color="@color/button_quiz_choice_correct"/>
 </shape>
