--- a/app/src/main/res/layout/alert_score.xml
+++ b/app/src/main/res/layout/alert_score.xml
@@ -16,41 +16,39 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorRed"
+            android:background="@color/button_quiz_choice_correct"
             android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:layout_gravity="center"
-                android:layout_margin="16dp"
-                android:src="@drawable/ic_no_internet" />
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/noInternetConnection"
+                android:text="Your Score"
+                android:gravity="center"
+                android:textSize="25dp"
                 android:textColor="@color/white"
-                android:layout_marginBottom="16dp"
+                android:layout_margin="16dp"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_gravity="center"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/message"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:textSize="30dp"
                 android:layout_margin="16dp"
-                android:text="@string/noInternetConnectionMgs"
+                android:gravity="center"
+                android:text="10/10"
                 android:textColor="@color/darkGray"
                 android:textStyle="normal" />
 
@@ -61,9 +59,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="16dp"
-                android:background="@drawable/btn_outline_red"
+                android:background="@drawable/btn_outline_green"
                 android:text="@string/ok"
-                android:textColor="@color/colorRed" />
+                android:textColor="@color/button_quiz_choice_correct" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
