--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary">#009688</color>
-    <color name="primary_dark">#00796B</color>
-    <color name="primary_light">#B2DFDB</color>
+    <color name="primary">#8eb476</color>
+    <color name="primary_dark">#8eb476</color>
     <color name="accent">#FFC107</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
-    <color name="icons">#FFFFFF</color>
     <color name="divider">#BDBDBD</color>
 
     <!-- Button -->
-    <color name="button_main_text">#FFFFFF</color>
     <color name="button_quiz_choice_correct">#8eb476</color>
-    <color name="button_quiz_choice_wrong">#e27f7f</color>
-    <color name="button_quiz_choice_default">#FFFFFF</color>
 
     <color name="darkGray">#B6B4B4</color>
+
     <color name="lightGray">#E0E0E0</color>
-    <color name="colorAccent">#F2A104</color>
-    <color name="colorYellow">#F2A104</color>
     <color name="colorRed">#DD4753</color>
     <color name="white">#FFFFFF</color>
 
